# DevOps23_Programmering_2

./: README.md
Inlämningsuppgift/: requirements.txt
Inlämningsuppgift/application/: app.py  func.py
Inlämningsuppgift/application/templates/: 404.html  index.html  result.html
Inlämningsuppgift/tests/: test_.py
lektion_3/: requirments.txt
lektion_3/application/: app.py
lektion_3/application/templates/: template.htm
lektion_4/: requirements
lektion_4/application/: app.py
lektion_4/application/templates/: form.html  index.html  layout.html
lektion_6/__MACOSX/application/: ._app.py  ._func.py
lektion_6/__MACOSX/application/static/css/: ._bootstrap-utilities.rtl.css.map
lektion_6/application/templates/: form.html
lektion_7/: requirements.txt
lektion_7/application/: app.py
lektion_8/: pyproject.toml  requirements.txt
lektion_8/src/application.egg-info/: PKG-INFO  SOURCES.txt
