[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lektion_8_packetering"
version = "0.0.1"
dependencies = [
    "blinker==1.6.3",
    "build==1.0.3",
    "click==8.1.7",
    "colorama==0.4.6",
    "Flask==3.0.0",
    "iniconfig==2.0.0",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "Markdown==3.5",
    "MarkupSafe==2.1.3",
    "numpy==1.26.1",
    "packaging==23.2",
    "pandas==2.1.2",
    "plotly==5.18.0",
    "pluggy==1.3.0",
    "Pycco==0.6.0",
    "Pygments==2.16.1",
    "pyproject_hooks==1.0.0",
    "pystache==0.6.5",
    "pytest==7.4.3",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "six==1.16.0",
    "smartypants==2.0.1",
    "tenacity==8.2.3",
    "tzdata==2023.3",
    "Werkzeug==3.0.1,"
    "requests",
    'importlib-metadata; python_version<"3.8"',
]